--- a/summit/static/package.json
+++ b/summit/static/package.json
@@ -2,6 +2,7 @@
   "name": "summit",
   "version": "2.0.0",
   "devDependencies": {
-    "bower": "^1.4.2"
+    "bower": "^1.4.2",
+    "node-sass": "3.4.2"
   }
 }
